config change (useless)

--- a/config/dev.env
+++ b/config/dev.env
@@ -2,3 +2,4 @@
 PORT=4000
 MONGODB_URL=mongodb://127.0.0.1:27017/louvre
 JWT_SECRET=extremeTask
+# mongodb+srv://rootUser:a1b2c3d4e5@cluster0.ffyrx.mongodb.net/louvre?retryWrites=true&w=majority
